# Edge-Detection-App

./: LICENSE  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/camera/: CameraManager.java
app/src/main/java/com/example/edgedetection/: MainActivity.java
app/src/main/java/gl/: GLRenderer.java  TextureShader.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
